--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,14 @@
 .env
+.env.*
 __pycache__/
 *.pyc
+*.pyo
+*.db
+*.sqlite3
+*.log
 instance/
-.env.*
+.vscode/
+.idea/
+.DS_Store
+*.egg-info/
+.mypy_cache/
