--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,6 @@ DATABASE_URL=postgresql://postgres:YOUR_PASSWORD@localhost:5432/contacts_db
 
 
 DB_NAME=contacts_db
-DB_USER=postgres
-DB_PASSWORD=ваш_пароль
+DB_USER=postgres (в .env використовуйте свій username чи логін до Postgres)
+DB_PASSWORD=ваш_пароль (в .env використовуйте свій password до Postgres)
 DB_HOST=localhost
